--- a/maths spé/C09/cours.tex
+++ b/maths spé/C09/cours.tex
@@ -37,7 +37,7 @@
 \end{definition}
 
 \begin{definition}{9.20}{convergence normale d'une série de fonctions}
-    Soit $E$ un $\K$-espace vectoriel de dimension finie, $A \subset E$ et $(f_n)_{n \in \N} \in \mc{F}(A,\K)^\N$. La série \notion{$\sum_n f_n$ converge normalement sur $A$} si la série $\sum_n \norme{u_n}_\infty^A$ converge.
+    Soit $E$ un $\K$-espace vectoriel de dimension finie, $A \subset E$ et $(f_n)_{n \in \N} \in \mc{F}(A,\K)^\N$. La série \notion{$\sum_n f_n$ converge normalement sur $A$} si la série $\displaystyle \sum_n \norme{f_n}_\infty^A$ converge.
 \end{definition}
 
 \begin{proposition}{9.25}{conditions nécessaires à la convergence normale}
