--- a/stock/en-tete_v4.tex
+++ b/stock/en-tete_v4.tex
@@ -410,11 +410,8 @@
 {   
     \vspace{15pt}
     \begin{boite_implementation}
-    \textbf{\textcolor{bleufonce}{Implémentation}}
-    \if\relax\detokenize{#2}\relax
-    \else
-        \textit{ - #1}
-    \fi \\ \\
+    \textbf{\textcolor{bleufonce}{Implémentation}}\textit{ - #1}
+     \\ \\
 }
 {    
     \end{boite_implementation}
