--- a/maths spé/C09/cours.tex
+++ b/maths spé/C09/cours.tex
@@ -58,7 +58,7 @@
 \end{theoreme}
 
 \begin{theoreme}{9.47}{premier de Weierstrass}
-    Toute fonction continue sur $\seg{a}{b}$, à valeurs réelles ou complexes, est limite uniforme d’une suite de fonctions polynomiales sur $\seg{a}{b}$
+    Toute fonction continue sur $\seg{a}{b}$, à valeurs réelles ou complexes, est limite uniforme sur $\seg{a}{b}$ d’une suite de fonctions polynomiales.
 \end{theoreme}
 
 \begin{theoreme}{9.49}{deuxième de Weierstrass}
