--- a/Informatique spé/C07/cours.tex
+++ b/Informatique spé/C07/cours.tex
@@ -131,5 +131,47 @@
     On dit qu'un séquent \notion{$\Gamma \these A$ est valide} si toute valuation satisfaisant les formules de $\Gamma$ satisfait $A$ \ie $\Gamma \models A$.
 \end{definition}
 
+\begin{definition}{7.20}{logique du premier ordre, langage du premier ordre}
+    La \notion{logique du premier ordre} est une extension de la logique propositionnelle, dans laquelle on travaille sur un \notion{langage du premier ordre}, défini par~:
+    \begin{itemize}
+        \item des symboles de constante (comme $0$, $\varnothing$, $\pi$,...)
+        \item des symboles de fonctions, comme $+ (5,3)$
+        \item des symboles de relations, comme $=$, $\neq$, $\geq$, $>$
+    \end{itemize}
+\end{definition}
+
+\begin{definition}{7.21}{terme en logique du premier ordre}
+    L'ensemble des \notion{termes pour un langage du premier ordre} est défini inductivement~:
+    \begin{itemize}
+        \item un symbole de constante est un terme
+        \item une variable est un terme (inconnue impliquée dans les quantificateurs entre autres)
+        \item pour $t_1, \dots, t_n$ des termes et $f$ un symbole de fonction d'arité $n$, $f(t_1, \dots, t_n)$
+    \end{itemize}
+\end{definition}
+
+\begin{definition}{7.22}{formule de la logique du premier ordre}
+    L'ensemble des formules de la logique du premier ordre pour un langage du premier ordre est défini inductivement~:
+    \begin{enumeratebf}
+        \item les formules suivantes, appelées \notion{formules atomiques} sont de telles formules~:
+        \begin{itemize}
+            \item $\top$ et $\bot$ sont des formules atomiques
+            \item pour $t_1, \dots, t_k$ des termes et $\mc{R}$ un symbole de relation d'arité $k$, $R(t_1,\dots, t_k)$ est une formule atomique
+        \end{itemize}
+        \item pour $F_1$ et $F_2$ deux telles formules~: 
+        \begin{itemize}
+            \item $F_1 \wedge F_2$ en est une.
+            \item $F_1 \vee F_2$ en est une.
+            \item $F_1 \rightarrow F_2$ en est une.
+            \item $F_1 \leftrightarrow F_2$ en est une.
+            \item $\lnot F_1$ en est une.
+        \end{itemize}
+        \item $F(x)$ un formule faisant intervenir la variable $x$~:
+        \begin{itemize}
+            \item $\forall x.F(x)$ en est une.
+            \item $\exists x.F(x)$ en est une.
+        \end{itemize}
+    \end{enumeratebf}
+\end{definition}
+
 
 \input{../../stock/pied.tex}
