--- a/Informatique spé/C07/cours.tex
+++ b/Informatique spé/C07/cours.tex
@@ -155,7 +155,7 @@
         \item les formules suivantes, appelées \notion{formules atomiques} sont de telles formules~:
         \begin{itemize}
             \item $\top$ et $\bot$ sont des formules atomiques
-            \item pour $t_1, \dots, t_k$ des termes et $\mc{R}$ un symbole de relation d'arité $k$, $R(t_1,\dots, t_k)$ est une formule atomique
+            \item pour $t_1, \dots, t_k$ des termes et $\mc{R}$ un symbole de relation d'arité $k$, $\mc{R}(t_1,\dots, t_k)$ est une formule atomique
         \end{itemize}
         \item pour $F_1$ et $F_2$ deux formules de la logique du premier ordre~: 
         \begin{itemize}
@@ -165,7 +165,7 @@
             \item $F_1 \leftrightarrow F_2$ en est une.
             \item $\lnot F_1$ en est une.
         \end{itemize}
-        \item $F(x)$ une formule de la logique du premier ordre faisant intervenir la variable $x$~:
+        \item pour $F$ une formule de la logique du premier ordre faisant intervenir la variable $x$~:
         \begin{itemize}
             \item $\forall x.F(x)$ en est une.
             \item $\exists x.F(x)$ en est une.
