--- a/français/spinoza3/cours.tex
+++ b/français/spinoza3/cours.tex
@@ -20,16 +20,63 @@
 \maketitle
 Comment préserver la communauté de la confrontation des pouvoirs (politique et religieux) et ce qui en résulte : les états dans l'État ?\\\\
 
-Lorsque Spinoza évoque l'histoire des hébreux, il explique que c'est le seul à réunir une religion à un peuple, là où les autres religions ont vocation à rayonner dans le monde. Puisque la Terre est dite Sainte, les autres ne peuvent qu'être impures, d'où l'isolement de l'État hébreux, jugeant les autres états d'impurs. Spinoza tire de cette réflexion historique deux constats sur la communauté politique~:
+Lorsque Spinoza évoque l'histoire des hébreux, il explique que c'est le seul à réunir une religion à un peuple, là où les autres religions ont vocation à rayonner dans le monde. Puisque la Terre est dite Sainte, les autres ne peuvent qu'être impures, d'où l'isolement de l'État hébreu, jugeant les autres états d'impurs. Spinoza tire de cette réflexion historique deux constats sur la communauté politique~:
 \begin{enumerate}
     \item le souverain doit pouvoir gouverner de manière absolument souveraine. Il ne doit pas avoir de concurrence : pas d'état dans l'État.
     \item les hommes d'église ne doivent pas s'occuper des affaires politiques. Autrement, l'état est voué à l'échec. Selon Spinoza, la parole divine n'est pas accessible aux hommes et que quiconque le réclame ne le fait que pour asseoir sa domination. C'est là que la religion bascule dans le fanatisme. Elle n'est plus une forme d'amour et de tolérance.
 \end{enumerate}
 \\
-Spinoza se demande Raphaël ï donc comment la communauté peut s'ouvrir à la pluralité, au lieu de la diaboliser (exactement comme le herem de Spinoza). Comment faire coexister les divisions nécessaires (car les êtres humains diffèrent) sans menacer la concorde, l'ordre public.
+Spinoza se demande donc comment la communauté peut s'ouvrir à la pluralité, au lieu de la diaboliser (exactement comme le herem de Spinoza). Comment faire coexister les divisions nécessaires (car les êtres humains diffèrent) sans menacer la concorde, l'ordre public.
 
 \section{Le contrat social Spinoziste}
 
 Titre du chapitre XVI : "Des fondements de l'". Spinoza s'oppose à la théorie naturaliste de Hobbes et Rousseau. Chez ces deux philosophes, l'État est fondé sur la base d'un état de nature : à l'origine, les hommes y auraient vécu (hypothétiquement). Hobbes pense que l'insécurité y était omni-présente, le chaos partout. Rousseau pense que l'homme est bon à l'état de nature et pense que c'est la société qui corrompt. Chez les deux portant, il y a rupture de l'état de nature à l'état politique. \\
 Spinoza diffère de cet approche. Selon lui, quelque chose relevant de l'état de nature doit subsister en nous : toutes les créatures vivantes sont animées par leur volonté de puissance, d'épanouissement (cf. \textit{connatus}). Ceci constitue notre volonté première commune. On ne peut alors imaginer que c'est derrière nous, car manifestement c'est en nous : on ne se rend compte de ce qu'on a que quand on l'a perdu. Comment harmoniser donc cette condition ? On débouche sur la notion de démocratie, régime qui permettrait de respecter ce droit naturel, tout en permettant 
+
+Spinoza établit que l'homme obéit aux mêmes lois que tous les autres organismes vivants. Il réfute l'idée cartésienne du libre arbitre (le jugement libre que chacun de nous peut avoir en exerçant sa raison). Pour Spinoza, l'arbitre n'est jamais libre. La liberté humaine résiderait dans le fait d'agir selon la nécessité de sa nature, comme tout organisme vivant donc. L'homme est un produit de la nature, et celle-ci ne le quitte pas. \textbf{L'homme est toujours dans l'état de nature}. Chacun a "un droit naturel souverain", c'est-à-dire que chacun a le droit de faire ce qui est en sa puissance, il a le droit d'actualiser (au sens figuré de rendre réel, en acte, de concrétiser) sa puissance guidée par son \textit{connatus} : \textbf{tendance de tout être à perséverer dans sont être}. Ce qui définit l'homme dans l'état de nature est donc son désir, sa volonté, aussi bien qu'une graine prend racine dans la terre et fait toujours tout pour. Finalement l'homme à l'état de nature n'est attiré que par ses désirs naturels, il n'est attiré qu'aux nécessité de la vie comme tout animal. Dans l'ordre naturel, ce que vise la Nature est l'harmonie entre tous les êtres (ce qui sera confirmé par la  science, avec la notion d'écosystème). Les hommes se délient de cette harmonie naturelle en inventant la raison et en se regroupant via le \textit{logos}. Ce renoncement est justement le fruit de ce \textit{connatus}. Mais l'état de nature n'est pas voué à disparaître : selon Spinoza, l'état civil est la prolongation de l'état de nature. Ici l'individu transfère son droit naturel (Attention Hobbes pense quelque chose de plus fort, où le pouvoir de la  communauté est très puissant : d'où \textit{le Léviathan}) pour prospérer individuellement via la communauté.
+
+définition de Spinoza de Démocratie : union des hommes en un tout qui a un droit souverain collectif. (environ page 67)
+
+\section{concorde et pluralité}
+
+Si le droit naturel subsite dans la communauté, alors la communauté n'est pas immortelle. C'est le discours des pouvoirs forts qui mettent en place des dynasties (pouvoir de père à fils). Jamais ces pouvoirs ne songent à leur fin.
+L'attrait de la démocratie est qu'elle n'est pas immortelle. Résultant normalement d'un contrat (l'individu transfère son droit naturel à l'Etat en espérant sa prospérité propre). Mais si la démocratie cause plus de tort que de bien, l'individu devrait pouvoir, selon Spinoza, mettre fin à ce contrat. Une démocratie persiste alors seulement si elle est bénéfique à ses sujets.\\
+
+Par "souverain démocratique" Spinoza évoque un souverain qui assure la concorde : coexistence des individus dans leurs différences. Un tel souverain permettrait à tous de vivre selon la conduite de la raison. Le propre du souverain est de proscire les passions mauvaises pour cultiver la raison. C'est la raison qui convainc que nous vivons mieux en nous associant (p.77 paragraphe 2). Selon Spinoza, plus une démocratie est nombreuse, plus les "absurdités" (désinformation, extrémisme), se fondent dans la masse.\\
+
+Dans le Léviathan, Hobbes pensait que le souverain devait avoir un droit de censure afin d'empêcher toute expression jugée séditieuse. Spinoza opte pour l'inverse en imaginant que l'Etat doit promouvoir la liberté et la pluralité de penser, et non seulement les permettre ! C'est l'exact opposé (il posera quand même des limites sinon tout le monde peut (doit du coup) insulter tout le monde hein). Spinoza pense que les bruits de couloir se feront quant même, empêcher ça est impossible. Puis Spinoza pense que la pluralité de penser est positive (du moment que le dialogue est raisonnable). Il écrit que chacun dans une société a des expériences formidables, et qu'il faut cultiver cette richesse pour renforcer la démocratie.\\
+
+Selon Spinoza, l'Etat est immanent à la société et ne résulte de rien d'autre que de la pluralité de l'individu. Sa conservation ne dépend pas du moindre autoritarisme mais de la piété de ses sujets.
+
+Pour que l'état soit solide, il faut que les individus y voient une prolongation de leur droit naturel. C'est pourquoi Chapitre XIX, Spinoza prône la piété envers l'Etat comme la plus haute forme de piété car c'est ce qui rend possible la coexistence des hommes pour le meilleur (tandis que la piété religieuse renvoie à l'approche personnelle et quand elle devient communautaire, elle permet peut être le salut de la communauté religieuse mais pas de TOUTE la société, qui est pluriculturelle).
+
+\section{Extension de la liberté d'expression}
+
+\subsection{Condition première de la laïcité}
+
+Pour Spinoza, pour que les individus puissent s'exprimer librement, et recourir à leur raison, il faut impérativemnt distinguer les ordres politique et religieux. Si le religieux se préoccupe du politique, immanquablement les dogmes referont surface : toutes les propositions contraires aux dogmes seront directement écartées, \textbf{non par raison mais par superstition}. Spinoza prône donc la sépration de l'Eglise et de l'Etat comme une condition "\textit{sine qua non}" de liberté d'expression (def sans laquelle elle est impossible).\\
+
+Pour éviter la domination des religions, il est impératif que diverses religions puissent coexister dans un même état. Le cas échéant, il n'y a pas qu'un dogme dans la société, mais plusieurs. Ainsi si un église affirme que quelque chose est mauvais elle pourra moins bien l'imposer. (P.204 -6 lignes avant fin où Spinoza évoque Amsterdam). Toute secte devrait être protégée par la loi pourvu qu'elle ne cause de tort à personne.
+
+\subsection{limites de cette liberté}
+
+Selon Spinoza, chacun pense selon la répétition de mêmes expériences. Exemple du peuple romain qui a tout le temps voté pour des tyrans.
+
+Spinoza conclut que la démocratie doit être l'essor de la raison car c'est elle qui nous rend huumains. Les véritables ennemis de la démocratie ne sont pas les libres penseurs mais les hommes de religions sectaires (pleines de pensées hostiles aux autres religions)
+
+\subsection{Chapitre XX}
+
+Il termine par ce qu'il a commencé au début (p.192 dernier paragraphe).
+
+L'état libre est institué pour élever les hommes à la raison et les libérer de la crainte, de la superstition religieuse. C'est la fin principale de l'état libre. En outre, la liberté de pensée et d'expression n'est pas seulement bonne pour la communauté mais renforce aussi le pouvoir du souverain car~:
+\begin{itemize}
+    \item elle suscite une amélioration permanente des lois, au fil des débats.
+    \item elle favorise l'amour de la patrie, la piété
+\end{itemize}
+là où un régime non démocratique favorise l'hypocrisie et la courtisanerie (voir p.199 haut) "l'encouragement donné à la détestable adulation et à la perfidie amènerait le règne de la fourberie et la corruption de toutes les relations sociales."
+
+Enfin Spinoza émet que l'expression des sujets doit être libre mais que leur action doit être soumise au respect des lois. Pour lui, la liberté d'expression ne doit pas inciter à enfreindre la loi.
+
+\textit{Walden, W.D. Thoreau} 
+
 \end{document}
